# chessembly-bot

./: Cargo.toml  README.md
src/: chessembly.rs  engine.rs  lib.rs
src/chessembly/: behavior.rs  board.rs  moves.rs
