[package]
name = "chessembly-bot"
version = "0.1.0"
edition = "2021"
authors = ["heartleth <myjmyjmyj237@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7.0", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
serde = "1.0.228"
serde_json = "1.0.145"
